--- a/DDD.html
+++ b/DDD.html
@@ -61,7 +61,7 @@
                         DDD
                         </h1>
                         <ul class="entry__header-meta">
-                            <li class="author">By <a href="#0">Mello</a></li>
+                            <li class="author">By <a href="#0">Mello</a>&<a href="#0">蹦蹦</a></li>
                             <li class="date">2026-01-12</li>
                             <!-- <li class="cat-links">
                                 <a href="#0">Marketing</a><a href="#0">Management</a>
@@ -88,6 +88,15 @@
                         </p>
                         <p>
                             6. "DDD 圣贤王 阿尔弗雷德"的②效果处理时, 可用的魔法/陷阱区域不足的场合, 先尽可能的把那些作为对象的卡在魔法/陷阱区域表侧表示放置, 剩余的卡送去/回到墓地.
+                        </p>
+                        <p>
+                            7. 即使是"这个效果特殊召唤的怪兽的攻击力·守备力变成0"记述的效果特殊召唤的"DDD 疾风大王 决策亚历山大", 无论是特殊召唤时场上已经存在3只以上"DDD"怪兽, 又或者是特殊召唤后场上的"DDD"怪兽数量变成3只以上, 它自身攻击力都会因为自身①效果的适用上升3000. 
+                        </p>
+                        <p>
+                            8. "DDD猎头"的①效果获得控制权的怪兽被破坏的场合, 可以发动额外卡组表侧表示存在的"DDD 零死王 零·机降神"的①效果. 
+                        </p>
+                        <p>
+                            9. 在不能进行战斗阶段的回合, 或在主要阶段2中, "DDD 创始王 克洛维"的②效果不能发动. 同样的情况下, "DDD 智慧王 所罗门"的②效果调整中. 
                         </p>
                         <h2>注意</h2>
                         <p>
@@ -122,6 +131,9 @@
                         </p>
                         <p>
                             11. "DDD 死讴王 恶德镇魂神"的②效果不用发动, 只能赋予这个回合首次用他作为素材融合/同调/超量/连接召唤的"DDD"怪兽.
+                        </p>
+                        <p>
+                            12. "DDD 赦俿王 死亡机降神"不能被灵摆召唤. 
                         </p>
                         <h2>自肃</h2>
                         <p>
