--- a/Orcust.html
+++ b/Orcust.html
@@ -62,7 +62,7 @@
                         </h1>
                         <ul class="entry__header-meta">
                             <li class="author">By <a href="#0">Mello</a></li>
-                            <li class="date">2026-01-09</li>
+                            <li class="date">2026-01-12</li>
                             <!-- <li class="cat-links">
                                 <a href="#0">Marketing</a><a href="#0">Management</a>
                             </li> -->
@@ -72,10 +72,47 @@
                     <div class="entry__content">
                         <h2>裁定</h2>
                         <p>
+                            1. "自奏圣乐的通天塔"的①效果适用中, "自奏圣乐·梦幻崩影"的②效果可以在伤害步骤开始时以及伤害计算前发动. 
+                        </p>
+                        <p>
+                            2. "宵星之骑士 吉尔苏"②效果处理时, 对方场上没有可用的怪兽区域存在的场合, Token也不会在自己场上特殊召唤.
+                        </p>
+                        <p>
+                            3. "不受魔法卡效果影响"的"自奏圣乐"怪兽也能适用"自奏圣乐的通天塔"的①效果.
+                        </p>
+                        <p>
+                            4. 选"●把自己的除外状态的1只机械族怪兽作为这张卡的超量素材"的"宵星之机神 丁吉尔苏"的①效果处理时, 自身变成里侧守备表示的场合, 也会正常处理; 处理时自身不在场上存在的场合, 完全不处理.
+                        </p>
+                        <p>
+                            5. "送去墓地的卡不送去墓地而除外"类效果适用中, "自奏圣乐的主音", "自奏圣乐·伽拉忒亚i"的①效果不能发动.
+                        </p>
+                        <p>
+                            6. "发动无效并除外"类效果, 被无效的卡不在原本的场所存在的场合, 不除外; 处理时适用"不能除外"类效果的场合, 无效适用, 不除外; "不能除外"类效果适用中, 不能发动这类效果.
                         </p>
 
                         <h2>注意</h2>
                         <p>
+                            1. "自奏圣乐·梦幻崩影"不会被和连接怪兽的战斗破坏.
+                        </p>
+                        <p>
+                            2. "自奏圣乐·伽拉忒亚"只要处于连接状态, 就不会被战斗破坏.
+                        </p>
+                        <p>
+                            3. "自奏圣乐·朗吉尔苏"只要处于连接状态, 就不会被效果破坏.
+                        </p>
+                        <p>
+                            4. "自奏圣乐·伽拉忒亚i"只是不能作为超量召唤的素材. "宵星之机神 丁吉尔苏"发动①效果, 可以选除外状态的这张卡作为素材.
+                        </p>
+
+                        <h2>自肃</h2>
+                        <p>
+                            1. "星遗物-『星杖』"的③效果, "自奏圣乐·梦幻崩影"的②效果, "自奏圣乐·嬉游曲恶魔"的①效果, "自奏圣乐·谐谑曲骷髅"的①效果有暗属性特殊召唤自肃. 
+                        </p>
+                        <p>
+                            2. "灵王的波动"会影响到: "天霆号 阿宙斯".
+                        </p>
+                        <p>
+                            3. "自奏圣乐之阶"的②效果由全回合机械族_暗属性特殊召唤誓约. 
                         </p>
 
                         <h2>卡组预览</h2>
@@ -83,8 +120,77 @@
                         <div id="deck-raw" style="display:none;">
                         #created by ygomobile
                         #main
+                        27204311
+                        93920420
+                        2333466
+                        4055337
+                        27918365
+                        2501624
+                        2501624
+                        2501624
+                        69811710
+                        69811710
+                        69811710
+                        57835716
+                        57835716
+                        57835716
+                        42141493
+                        42141493
+                        42141493
+                        21441617
+                        21441617
+                        14558127
+                        14558127
+                        23434538
+                        94145021
+                        94145021
+                        94145021
+                        81439173
+                        84211599
+                        22283204
+                        24224830
+                        24299458
+                        24299458
+                        24299458
+                        65681983
+                        79791878
+                        79791878
+                        79791878
+                        90351981
+                        40366667
+                        40366667
+                        703897
                         #extra
+                        37818794
+                        59400890
+                        73082255
+                        93854893
+                        74820316
+                        86066373
+                        12067160
+                        39752820
+                        2857636
+                        30741503
+                        30741503
+                        29301450
+                        65741786
+                        48835607
+                        48835607
                         !side
+                        84192580
+                        84192580
+                        84192580
+                        12580479
+                        12580479
+                        18144506
+                        19613556
+                        83326048
+                        83326048
+                        53334471
+                        58921041
+                        90846359
+                        41420027
+                        41420027
                         </div>
 
                         <div id="deck-render"></div>
