--- a/Orcust.html
+++ b/Orcust.html
@@ -112,85 +112,86 @@
                             2. "灵王的波动"会影响到: "天霆号 阿宙斯".
                         </p>
                         <p>
-                            3. "自奏圣乐之阶"的②效果由全回合机械族_暗属性特殊召唤誓约. 
+                            3. "自奏圣乐之阶"的②效果有全回合机械族_暗属性特殊召唤誓约. 
                         </p>
 
                         <h2>卡组预览</h2>
 
                         <div id="deck-raw" style="display:none;">
-                        #created by ygomobile
-                        #main
-                        27204311
-                        93920420
-                        2333466
-                        4055337
-                        27918365
-                        2501624
-                        2501624
-                        2501624
-                        69811710
-                        69811710
-                        69811710
-                        57835716
-                        57835716
-                        57835716
-                        42141493
-                        42141493
-                        42141493
-                        21441617
-                        21441617
-                        14558127
-                        14558127
-                        23434538
-                        94145021
-                        94145021
-                        94145021
-                        81439173
-                        84211599
-                        22283204
-                        24224830
-                        24299458
-                        24299458
-                        24299458
-                        65681983
-                        79791878
-                        79791878
-                        79791878
-                        90351981
-                        40366667
-                        40366667
-                        703897
-                        #extra
-                        37818794
-                        59400890
-                        73082255
-                        93854893
-                        74820316
-                        86066373
-                        12067160
-                        39752820
-                        2857636
-                        30741503
-                        30741503
-                        29301450
-                        65741786
-                        48835607
-                        48835607
-                        !side
-                        84192580
-                        84192580
-                        84192580
-                        12580479
-                        12580479
-                        18144506
-                        19613556
-                        83326048
-                        83326048
-                        53334471
-                        58921041
-                        90846359
-                        41420027
-                        41420027
+                            #created by OURYGO
+                            #main
+                            45488703
+                            93920420
+                            4055337
+                            27918365
+                            69811710
+                            69811710
+                            69811710
+                            57835716
+                            57835716
+                            57835716
+                            42141493
+                            42141493
+                            42141493
+                            21441617
+                            21441617
+                            21441617
+                            73642296
+                            73642297
+                            14558127
+                            14558128
+                            23434538
+                            94145021
+                            94145021
+                            94145022
+                            25311006
+                            26845680
+                            35726888
+                            35726888
+                            81439173
+                            24224831
+                            24299458
+                            24299458
+                            48130397
+                            48130397
+                            65681983
+                            90351981
+                            40366667
+                            40366667
+                            703897
+                            703897
+                            #extra
+                            11765832
+                            54757758
+                            90448279
+                            93039339
+                            93854893
+                            93854893
+                            74820316
+                            86066372
+                            76145142
+                            30741503
+                            30741503
+                            29301450
+                            65741786
+                            48835607
+                            48835607
+                            !side
+                            84192580
+                            84192580
+                            84192580
+                            18144507
+                            19613556
+                            35269904
+                            49299410
+                            83326048
+                            83326048
+                            23002292
+                            41420027
+                            41420027
+                            84749824
+                            84749824
+                            84749824
                         </div>
 
                         <div id="deck-render"></div>
