更正码丽丝

--- a/Maliss.html
+++ b/Maliss.html
@@ -103,17 +103,19 @@
                             1. "码丽丝<代码>TB-11"特殊召唤的怪兽在特殊召唤的回合不能攻击, 不能把效果发动. 
                         </p>
                         <p>
-                            2. 特殊召唤过电子界族怪兽以外的怪兽的回合不能把"转码语者"的②效果发动. 
+                            2. 注意码丽丝下级处于码丽丝连接怪兽的连接端时各自的效果. 
                         </p>
                         <p>
-                            3. 注意"灵王的波动"自肃. 会影响到的卡有"防火龙", "转码语者", "三栅极男巫". 
+                            3. "G石人·水晶心"互相连接的地属性连接怪兽可以攻击两次, 会穿防, 与自身互相连接的地属性连接怪兽会根据它的G石人指示物的数量提升攻击力. 
+                        </p>
+                        <h2>自肃</h2>
+                        <p>
+                            1. 特殊召唤过电子界族怪兽以外的怪兽的回合不能把"转码语者"的②效果发动. 
                         </p>
                         <p>
-                            4. 注意码丽丝下级处于码丽丝连接怪兽的连接端时各自的效果. 
+                            2. "灵王的波动"会影响到: "防火龙", "转码语者", "三栅极男巫". 
                         </p>
-                        <p>
-                            5. "G石人·水晶心"互相连接的地属性连接怪兽可以攻击两次, 会穿防, 与自身互相连接的地属性连接怪兽会根据它的G石人指示物的数量提升攻击力. 
-                        </p>
+
 
                         <h2>卡组预览</h2>
 
@@ -192,6 +194,8 @@
                         83326048
                         96474800
                         23002292
+                        !others cards
+                        32617464
                         </div>
 
                         <div id="deck-render"></div>
