提交七音符以及多数卡组细节修改

--- a/DDD.html
+++ b/DDD.html
@@ -103,13 +103,13 @@
                             1. "DDD 坏薙王 深渊末日神"的①的灵摆效果处理时会适用"这个回合，对方受到的战斗伤害变成一半。"
                         </p>
                         <p>
-                            2. "DD 俄耳托斯"的①的怪兽效果会错过时点.
+                            2. "DD 俄耳托斯"的①的怪兽效果会错过时点. 那个灵摆效果可以以自身为对象发动, 这时另一张对象必须是自己场上的一张"DD"卡或是"契约书"卡.
                         </p>
                         <p>
                             3. "常暗的契约书"的①效果不是对怪兽适用的效果.
                         </p>
                         <p>
-                            4. 灵摆区域的"DD 魔导贤者 开普勒"被无效后, 灵摆刻度变为原本的数值.
+                            4. "DD 魔导贤者 开普勒"的②的灵摆效果是必发效果, 灵摆区域的"DD 魔导贤者 开普勒"被无效后, 灵摆刻度变为原本的数值.
                         </p>
                         <p>
                             5. "DDD 智慧王 所罗门"的②的●效果, 是必发效果, 获得这个效果的怪兽在伤害步骤结束时在场上存在会发动, 不在场上存在则不会发动.
@@ -127,13 +127,10 @@
                             9. 自己场上存在"DD"怪兽才能通过自身效果特殊召唤"DD 狮鹫", 只能守备表示特殊召唤.
                         </p>
                         <p>
-                            10. "DD 俄耳托斯"的灵摆效果可以以自身为对象发动, 这时另一张对象必须是自己场上的一张"DD"卡或是"契约书"卡.
+                            10. "DDD 死讴王 恶德镇魂神"的②效果不用发动, 只能赋予这个回合首次用他作为素材融合/同调/超量/连接召唤的"DDD"怪兽.
                         </p>
                         <p>
-                            11. "DDD 死讴王 恶德镇魂神"的②效果不用发动, 只能赋予这个回合首次用他作为素材融合/同调/超量/连接召唤的"DDD"怪兽.
-                        </p>
-                        <p>
-                            12. "DDD 赦俿王 死亡机降神"不能被灵摆召唤. 
+                            11. "DDD 赦俿王 死亡机降神"不能被灵摆召唤. 
                         </p>
                         <h2>自肃</h2>
                         <p>
