--- a/Kewl_Tune.html
+++ b/Kewl_Tune.html
@@ -91,10 +91,20 @@
                             6. "杀手旋律·削波"的②效果处理时, 不能除外的效果适用的场合, 那个效果完全不处理.
                         </p>
                         <p>
-                            7. 有多个追加通常召唤的效果适用中, 这个回合中也只能适用其中任意一个. 适用过一个的场合, "点唱酒吧“杀手旋律”"的①效果不能适用. 不能适用"点唱酒吧“杀手旋律”"的①效果进行怪兽的盖放. 可以上级召唤. 那个③效果可以解放自己场上里侧守备表示的怪兽. 那个②效果是在场上表侧表示持续适用的效果, 自己场上攻击力是0的"杀手旋律·响度战争"被"禁忌的一滴"无效, 这个回合对方场上或墓地再有调整存在, 攻击力也维持在0. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为3300. 被"禁忌的一滴"无效的"杀手旋律·响度战争"的攻击力已经因为那个②效果适用, 攻击力是3300的场合, 那个攻击力变为1650. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为4950.
+                            7. "点唱酒吧“杀手旋律”"
+                            <br>
+                            ●有多个追加通常召唤的效果适用中, 这个回合中也只能适用其中任意一个. 适用过一个的场合, "点唱酒吧“杀手旋律”"的①效果不能适用. 
+                            <br>
+                            ●不能适用"点唱酒吧“杀手旋律”"的①效果进行怪兽的盖放. 可以上级召唤. 
+                            <br>
+                            ●那个③效果可以解放自己场上里侧守备表示的怪兽. 
+                            <br>
+                            ●那个②效果是在场上表侧表示持续适用的效果, 自己场上攻击力是0的"杀手旋律·响度战争"被"禁忌的一滴"无效, 这个回合对方场上或墓地再有调整存在, 攻击力也维持在0. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为3300. 
+                            <br>
+                            ●被"禁忌的一滴"无效的"杀手旋律·响度战争"的攻击力已经因为那个②效果适用, 攻击力是3300的场合, 那个攻击力变为1650. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为4950.
                         </p>
                         <p>
-                            8. 红莲新星与可以作为调整使用的调整以外作为同调素材或是与可以作为非调整使用的调整作为同调素材, 同调召唤素材要求不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动红莲新星的②效果.
+                            8. 红莲新星与可以作为调整使用的调整以外作为同调素材或是与可以作为非调整使用的调整作为同调素材, 同调召唤素材不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动红莲新星的②效果.
                         </p>
 
                         <h2>注意</h2>
