--- a/header.html
+++ b/header.html
@@ -41,6 +41,7 @@
                     <li><a href="SynchronizeGS.html">耀圣星尘同调均</a></li>
                     <li><a href="Maliss.html">码丽丝</a></li>
                     <li><a href="DDD.html">DDD</a></li>
+                    <li><a href="Solfachord.html">七音符</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
