--- a/Solfachord.html
+++ b/Solfachord.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>七音符</title>
+    <title>七音服</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -58,7 +58,7 @@
 
                     <div class="content__page-header entry__header">
                         <h1 class="display-1 entry__title">
-                        七音符
+                        七音服
                         </h1>
                         <ul class="entry__header-meta">
                             <li class="author">By <a href="#0">Mello</a></li>
@@ -91,7 +91,7 @@
                         </p>
                         <h2>注意</h2>
                         <p>
-                            1. "梭之七音服·格蕾西娅"有攻击宣言以及伤害步骤对对方怪兽禁言效果. 只能在自己的"七音符"怪兽攻击时才会适用. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
+                            1. "梭之七音服·格蕾西娅"有攻击宣言以及伤害步骤对对方怪兽禁言效果. 只能在自己的"七音服"怪兽攻击时才会适用. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
                         </p>
                         <p>
                             2. "七音服·索尔费吉娅"的灵摆的①效果只有自己场上存在"大钢琴之七音服"怪兽才能适用. 
@@ -100,7 +100,7 @@
                             3. "多之七音服·丘蒂娅"有上升攻击力的效果. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
                         </p>
                         <p>
-                            4. "七音服·普莉莫娅"会让自己发动的"七音符"卡的效果不会被无效化. 必须要自己灵摆区域存在奇数与偶数. "那个发动无效"类效果仍可以无效"七音符"卡的发动. "大钢琴之七音服·库莉娅"的②效果也一样. 
+                            4. "七音服·普莉莫娅"会让自己发动的"七音服"卡的效果不会被无效化. 必须要自己灵摆区域存在奇数与偶数. "那个发动无效"类效果仍可以无效"七音服"卡的发动. "大钢琴之七音服·库莉娅"的②效果也一样. 
                         </p>
                         <p>
                             5. "大钢琴之七音服·库莉娅"的③效果只能在自己的灵摆区域有奇数刻度存在才能发动. 
