--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                         <div class="entry__text">
                             <div class="entry__header">
     
-                                <h2 class="entry__title"><a href="Solfachord.html">七音符</a></h2>
+                                <h2 class="entry__title"><a href="Solfachord.html">七音服</a></h2>
                                 <div class="entry__meta">
                                     <!-- <span class="entry__meta-cat">
                                         <a href="category.html">Design</a> 
