杀旋语句调整

--- a/Kewl_Tune.html
+++ b/Kewl_Tune.html
@@ -104,7 +104,7 @@
                             ●被"禁忌的一滴"无效的"杀手旋律·响度战争"的攻击力已经因为那个②效果适用, 攻击力是3300的场合, 那个攻击力变为1650. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为4950.
                         </p>
                         <p>
-                            8. 红莲新星与可以作为调整使用的调整以外作为同调素材或是与可以作为非调整使用的调整作为同调素材, 同调召唤素材不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动红莲新星的②效果.
+                            8. "红莲新星"与"可以作为调整使用"的调整以外作为同调素材或是与"可以作为非调整使用"的调整作为同调素材, 同调召唤素材不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动"红莲新星"的②效果.
                         </p>
 
                         <h2>注意</h2>
