--- a/Kewl_Tune.html
+++ b/Kewl_Tune.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>杀手旋律</title>
+    <title>杀手级调整曲</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -58,7 +58,7 @@
 
                     <div class="content__page-header entry__header">
                         <h1 class="display-1 entry__title">
-                        杀手旋律
+                        杀手级调整曲
                         </h1>
                         <ul class="entry__header-meta">
                             <li class="author">By <a href="#0">Mello</a></li>
@@ -71,40 +71,40 @@
 
                     <div class="entry__content">
                         <h2>裁定</h2>
-    
+
                         <p>
                             1. 多个可以把手卡的怪兽作为同调素材适用时, 最多能把那个适用数量的手卡的怪兽作为同调素材.
                         </p>
                         <p>
-                            2. "杀手旋律"的"场上的这张卡为素材作同调召唤的场合，手卡1只调整也能作为同调素材。"在自身被无效的场合也能适用.
+                            2. 「杀手级调整曲」的「场上的这张卡为素材作同调召唤的场合，手卡1只调整也能作为同调素材。」在自身被无效的场合也能适用.
                         </p>
                         <p>
-                            3. "杀手旋律"的自肃适用的回合, 也不能用"武力军奏"来同调同调调整以外的怪兽. 不能特召持有"这个效果特殊召唤的这张卡当作调整使用"效果的调整以外的怪兽. 也不能特殊召唤持有"这张卡当作调整使用特殊召唤"效果的非调整. 
+                            3. 「杀手级调整曲」的自肃适用的回合, 也不能用「武力军奏」来同调同调调整以外的怪兽. 不能特召持有「这个效果特殊召唤的这张卡当作调整使用」效果的调整以外的怪兽. 也不能特殊召唤持有「这张卡当作调整使用特殊召唤」效果的非调整. 
                         </p>
                         <p>	
-                            4. "杀手旋律·提示"的②效果处理时, 不能除外的效果适用的场合, 这个效果完全不适用, 也不翻开卡.
+                            4. 「杀手级调整曲·提示员」的②效果处理时, 不能除外的效果适用的场合, 这个效果完全不适用, 也不翻开卡.
                         </p>
                         <p>
-                            5. "杀手旋律·削波"的①效果处理时, 宣言同调的"次元障壁"适用的场合, 只进行这张卡的特殊召唤. "杀手旋律同调"也一样. "次元障壁"宣言同调适用的回合, 也能发动这两张卡的效果. 那个场合, 不能处理进行1只同调怪兽调整的同调召唤.
+                            5. 「杀手级调整曲·削波手」的①效果处理时, 宣言同调的「次元障壁」适用的场合, 只进行这张卡的特殊召唤. 「杀手级调整曲同调」也一样. 「次元障壁」宣言同调适用的回合, 也能发动这两张卡的效果. 那个场合, 不能处理进行1只同调怪兽调整的同调召唤.
                         </p>
                         <p>
-                            6. "杀手旋律·削波"的②效果处理时, 不能除外的效果适用的场合, 那个效果完全不处理.
+                            6. 「杀手级调整曲·削波手」的②效果处理时, 不能除外的效果适用的场合, 那个效果完全不处理.
                         </p>
                         <p>
-                            7. "点唱酒吧“杀手旋律”"
+                            7. 「点唱机酒吧“杀手级调整曲”」
                             <br>
-                            ●有多个追加通常召唤的效果适用中, 这个回合中也只能适用其中任意一个. 适用过一个的场合, "点唱酒吧“杀手旋律”"的①效果不能适用. 
+                            ●有多个追加通常召唤的效果适用中, 这个回合中也只能适用其中任意一个. 适用过一个的场合, 「点唱机酒吧“杀手级调整曲”」的①效果不能适用. 
                             <br>
-                            ●不能适用"点唱酒吧“杀手旋律”"的①效果进行怪兽的盖放. 可以上级召唤. 
+                            ●不能适用「点唱机酒吧“杀手级调整曲”」的①效果进行怪兽的盖放. 可以上级召唤. 
                             <br>
                             ●那个③效果可以解放自己场上里侧守备表示的怪兽. 
                             <br>
-                            ●那个②效果是在场上表侧表示持续适用的效果, 自己场上攻击力是0的"杀手旋律·响度战争"被"禁忌的一滴"无效, 这个回合对方场上或墓地再有调整存在, 攻击力也维持在0. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为3300. 
+                            ●那个②效果是在场上表侧表示持续适用的效果, 自己场上攻击力是0的「杀手级调整曲响度战争」被「禁忌的一滴」无效, 这个回合对方场上或墓地再有调整存在, 攻击力也维持在0. 下个回合, 对方场上或墓地存在调整的场合, 「杀手级调整曲响度战争」攻击力为3300. 或是, 这个回合发动第二张「点唱机酒吧“杀手级调整曲”」的场合, 「杀手级调整曲响度战争」攻击力为3300. 
                             <br>
-                            ●被"禁忌的一滴"无效的"杀手旋律·响度战争"的攻击力已经因为那个②效果适用, 攻击力是3300的场合, 那个攻击力变为1650. 下个回合, 对方场上或墓地存在调整的场合, "杀手旋律·响度战争"攻击力为3300. 或是, 这个回合发动第二张"点唱酒吧“杀手旋律”"的场合, "杀手旋律·响度战争"攻击力为4950.
+                            ●被「禁忌的一滴」无效的「杀手级调整曲响度战争」的攻击力已经因为那个②效果适用, 攻击力是3300的场合, 那个攻击力变为1650. 下个回合, 对方场上或墓地存在调整的场合, 「杀手级调整曲响度战争」攻击力为3300. 或是, 这个回合发动第二张「点唱机酒吧“杀手级调整曲”」的场合, 「杀手级调整曲响度战争」攻击力为4950.
                         </p>
                         <p>
-                            8. "红莲新星"与"可以作为调整使用"的调整以外作为同调素材或是与"可以作为非调整使用"的调整作为同调素材, 同调召唤素材不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动"红莲新星"的②效果.
+                            8. 「红莲新星」与「可以作为调整使用」的调整以外作为同调素材或是与「可以作为非调整使用」的调整作为同调素材, 同调召唤素材不要求非调整的同调怪兽的场合. 必须宣言另一只怪兽是作为调整怪兽还是作为非调整怪兽使用进行的同调召唤. 只有宣言另一只是作为调整怪兽进行同调召唤的场合, 才能发动「红莲新星」的②效果.
                         </p>
 
                         <h2>注意</h2>
