杀旋译名调整

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <div class="entry__text">
                             <div class="entry__header">
 
-                                <h2 class="entry__title"><a href="Kewl_Tune.html">杀手旋律</a></h2>
+                                <h2 class="entry__title"><a href="Kewl_Tune.html">杀手级调整曲</a></h2>
                                 <div class="entry__meta">
                                     <!-- <span class="entry__meta-cat">
                                         <a href="category.html">Design</a> 
