--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
                     <li><a href="Mitsurugi.html">巳剑</a></li>
                     <li><a href="Exosister.html">救祓少女</a></li>
                     <li><a href="Radiant_Typhoon.html">绚岚</a></li>
-                    <li><a href="Kewl_Tune.html">杀手旋律</a></li>
+                    <li><a href="Kewl_Tune.html">杀手级调整曲</a></li>
                     <li><a href="DracotailBranded.html">星辰烙印</a></li>
                     <li><a href="Sky_Striker.html">闪刀</a></li>
                     <li><a href="KV.html">征服斗魂K9</a></li>
