--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -99,43 +99,56 @@
                     </div> <!-- end entry__header -->
 
                     <div class="entry__content">
-
                         <h2>裁定</h2>
-    
-                        <p>
-                            1. 里侧表示的"天丛云之巳剑"被解放, 也能在那个连锁处理完成后发动"巳剑之神镜"的②效果. "大宇宙"适用中也一样. 
-                        </p>
-                        <p>
-                            2. "牲祭封印之假面"这类效果适用中, 也不能发动"巳剑降临". "巳剑降临"处理时这类效果适用的场合, 也不能从卡组解放卡. 
-                        </p>
-                        <p>
-                            3. 不能连锁"破灭与终焉之支配者"的②效果的发动, 连锁发动"屋敷童", "灰流丽"的效果. 可以连锁发动"灵王的波动". 
-                        </p>
-                        <p>
-                            4. 对方发动过"冥王结界波"的回合, 自己发动"巳剑劝请"选适用第二个●的场合, 由于自己受到伤害变成0, 结果不能适用后续. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                发动③效果的「天羽羽斩之巳剑」不在原本的场所存在的场合, 那个加入手卡的效果处理完毕后, 不能处理自身的特殊召唤. 「天丛云之巳剑」「布都御魂之巳剑」也一样. 
+                            </p>
+                            <p>
+                                里侧表示的「天丛云之巳剑」被解放, 也能在那个连锁处理完成后发动「巳剑之神镜」的②效果. 「大宇宙」适用中也一样. 
+                            </p>
+                            <p>
+                                「牲祭封印之假面」这类效果适用中, 也不能发动「巳剑降临」. 「巳剑降临」处理时这类效果适用的场合, 也不能从卡组解放卡. 
+                            </p>
+                            <p>
+                                「破灭与终焉之支配者」
+                                <br>
+                                ●不能连锁「破灭与终焉之支配者」的②效果的发动, 连锁发动「屋敷童」, 「灰流丽」的效果. 可以连锁发动「灵王的波动」. 
+                                <br>
+                                ●除外「巳剑降临」发动「破灭与终焉之支配者」的②效果时, 需要同时宣言适用「巳剑降临」的哪1个『●』效果. 
+                                <br>
+                                ●已经发动过「巳剑降临」某个『●』效果, 可以通过发动「破灭与终焉之支配者」的②效果来再次适用同1个效果. 
+                            </p>
+                            <p>
+                                选择「巳剑降临」的从卡组把怪兽解放的效果时, 不能连锁发动「灰流丽」. 
+                            </p>
+                            <p>
+                                对方发动过「冥王结界波」的回合, 自己发动「巳剑劝请」选适用第二个●的场合, 由于自己受到伤害变成0, 结果不能适用后续. 
+                            </p>
+                        </div>
 
                         <h2>注意</h2>
+                        <div class="auto-number">
+                            <p>
+                                「巳剑之尊 草那艺」的代替破坏, 只能是把场上的自身解放. 「巳剑之尊 麁正」, 「巳剑之尊 佐士」也一样.
+                            </p>
+                            <p>
+                                「天羽羽斩之巳剑」有下降攻击力的效果.
+                            </p>
+                            <p>
+                                「仪式的事前准备」不能检索「巳剑降临」.
+                            </p>
+                            <p>
+                                「巳剑大祓」处理时必须处理解放自己场上1只其他怪兽. 必须存在可以解放的怪兽才能发动. 处理时, 不存在的场合, 这部分不处理.
+                            </p>
+                        </div>
                         
-                        <p>
-                            1. "巳剑之皇子 小碓"有爬虫类族效果自肃.
-                        </p>
-
-                        <p>
-                            2. "巳剑之尊 草那艺"的代替破坏, 只能是把场上的自身解放. "巳剑之尊 麁正", "巳剑之尊 佐士"也一样.
-                        </p>
-
-                        <p>
-                            3. "天羽羽斩之巳剑"有下降攻击力的效果.
-                        </p>
-
-                        <p>
-                            4. "仪式的事前准备"不能检索"巳剑降临".
-                        </p>
-
-                        <p>
-                            5. "巳剑大祓"处理时必须处理解放自己场上1只其他怪兽. 必须存在可以解放的怪兽才能发动. 处理时, 不存在的场合, 这部分不处理.
-                        </p>
+                        <h2>自肃</h2>
+                        <div class="auto-number">
+                            <p>
+                                「巳剑之皇子 小碓」有爬虫类族效果自肃.
+                            </p>
+                        </div>
 
                         <h2>卡组预览</h2>
 
