修改首页, 码丽丝以及七音符

--- a/Maliss.html
+++ b/Maliss.html
@@ -71,52 +71,57 @@
 
                     <div class="entry__content">
                         <h2>裁定</h2>
-                        <p>
-                            1. 连锁"暗之诱惑"发动"古遗物-圣枪"的③效果. 处理时需要展示手卡一只暗属性怪兽, 不能展示的场合, 全部手牌送去墓地. 
-                        </p>
-                        <p>
-                            2. "码丽丝梦游地下界"适用中, 对方的"闪刀姬-飒天"不能选择直接攻击. 不受魔法卡效果影响的怪兽可以攻击其他码丽丝怪兽. 
-                        </p>
-                        <p>
-                            3. "三战之号"盖放的码丽丝陷阱卡不能适用"这张卡也能把自己场上1只表侧表示的「码丽丝」怪兽除外，在盖放的回合发动。"
-                        </p>
-                        <p>
-                            4. "发动无效并除外"类效果, 被无效的卡不在原本的场所存在的场合, 不除外; 处理时适用"不能除外"类效果的场合, 无效适用, 不除外; "不能除外"类效果适用中, 不能发动这类效果. 
-                        </p>
-                        <p>
-                            5. "青眼精灵龙"的①效果适用中, "协心代码语者@火灵天星"的①效果也能发动, 这个场合, 只能特殊召唤1只怪兽. 
-                        </p>
-                        <p>
-                            6. 只有以墓地的怪兽发动"防火龙"的①效果, 才能连锁发动"屋敷童". 
-                        </p>
-                        <p>
-                            7. 发动过①效果的"防火龙"被表侧表示放置到魔法陷阱区域, 那之后又因为效果被在怪兽区域特殊召唤的场合, 也能再次不在同一回合发动①效果, 可以在没有发动过①效果的回合再次发动①效果. 
-                        </p>
-                        <p>
-                            8. 通常盖放的攻击力1000以下的怪兽再反转后, 也能作为素材连接召唤"转生炎兽 独角兔". 
-                        </p>
-                        <p>
-                            9. "码丽丝<王后>红心加密"的①效果, 只要处理时连接端存在怪兽就会适用"这个发动和这个效果不会被无效化".
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                连锁「暗之诱惑」发动「古遗物-圣枪」的③效果. 处理时需要展示手卡一只暗属性怪兽, 不能展示的场合, 全部手牌送去墓地. 
+                            </p>
+                            <p>
+                                「码丽丝梦游地下界」适用中, 对方的「闪刀姬-飒天」不能选择直接攻击. 不受魔法卡效果影响的怪兽可以攻击其他码丽丝怪兽. 
+                            </p>
+                            <p>
+                                「三战之号」盖放的码丽丝陷阱卡不能适用「这张卡也能把自己场上1只表侧表示的「码丽丝」怪兽除外，在盖放的回合发动。」
+                            </p>
+                            <p>
+                                「发动无效并除外」类效果, 被无效的卡不在原本的场所存在的场合, 不除外; 处理时适用「不能除外」类效果的场合, 无效适用, 不除外; 「不能除外」类效果适用中, 不能发动这类效果. 
+                            </p>
+                            <p>
+                                「青眼精灵龙」的①效果适用中, 「协心代码语者@火灵天星」的①效果也能发动, 这个场合, 只能特殊召唤1只怪兽. 
+                            </p>
+                            <p>
+                                只有以墓地的怪兽发动「防火龙」的①效果, 才能连锁发动「屋敷童」. 
+                            </p>
+                            <p>
+                                发动过①效果的「防火龙」被表侧表示放置到魔法陷阱区域, 那之后又因为效果被在怪兽区域特殊召唤的场合, 也能再次不在同一回合发动①效果, 可以在没有发动过①效果的回合再次发动①效果. 
+                            </p>
+                            <p>
+                                通常盖放的攻击力1000以下的怪兽再反转后, 也能作为素材连接召唤「转生炎兽 独角兔」. 
+                            </p>
+                            <p>
+                                「码丽丝<王后>红心加密」的①效果, 只要处理时连接端存在怪兽就会适用「这个发动和这个效果不会被无效化」.
+                            </p>
+                        </div>
                         <h2>注意</h2>
-                        <p>
-                            1. "码丽丝<代码>TB-11"特殊召唤的怪兽在特殊召唤的回合不能攻击, 不能把效果发动. 
-                        </p>
-                        <p>
-                            2. 注意码丽丝下级处于码丽丝连接怪兽的连接端时各自的效果. 
-                        </p>
-                        <p>
-                            3. "G石人·水晶心"互相连接的地属性连接怪兽可以攻击两次, 会穿防, 与自身互相连接的地属性连接怪兽会根据它的G石人指示物的数量提升攻击力. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                「码丽丝<代码>TB-11」特殊召唤的怪兽在特殊召唤的回合不能攻击, 不能把效果发动. 
+                            </p>
+                            <p>
+                                注意码丽丝下级处于码丽丝连接怪兽的连接端时各自的效果. 
+                            </p>
+                            <p>
+                                「G石人·水晶心」互相连接的地属性连接怪兽可以攻击两次, 会穿防, 与自身互相连接的地属性连接怪兽会根据它的G石人指示物的数量提升攻击力. 
+                            </p>
+                        </div>
                         <h2>自肃</h2>
-                        <p>
-                            1. 特殊召唤过电子界族怪兽以外的怪兽的回合不能把"转码语者"的②效果发动. 
-                        </p>
-                        <p>
-                            2. "灵王的波动"会影响到: "防火龙", "转码语者", "三栅极男巫". 
-                        </p>
-
-
+                        <div class="auto-number">
+                            <p>
+                                特殊召唤过电子界族怪兽以外的怪兽的回合不能把「转码语者」的②效果发动. 
+                            </p>
+                            <p>
+                                「灵王的波动」会影响到: 「防火龙」, 「转码语者」, 「三栅极男巫」. 
+                            </p>
+                        </div>
+                        
                         <h2>卡组预览</h2>
 
                         <div id="deck-raw" style="display:none;">
