--- a/Solfachord.html
+++ b/Solfachord.html
@@ -71,40 +71,44 @@
 
                     <div class="entry__content">
                         <h2>裁定</h2>
-                        <p>
-                            1. "多之七音服·库莉娅"的①效果可以解放里侧表示的灵摆怪兽. 
-                        </p>
-                        <p>
-                            2. 不解放自身来发动②的怪兽效果的"七音服·索尔费吉娅"不能被连锁"屋敷童".
-                        </p>
-                        <p>
-                            3. "西之七音服·比蒂娅"的"那张卡从场上离开的场合除外"即使是对陷阱怪兽适用, 那个陷阱怪兽在怪兽区域从场上离开的场合也会除外. 那个陷阱怪兽被"卡的效果无效"类效果无效, 表侧表示回到魔法/陷阱区域, 再从场上离开的场合也会除外. 
-                        </p>
-                        <p>
-                            4. "霸王龙之魂"不能特殊召唤额外卡组表侧表示的"霸王龙 扎克". 这个效果特殊召唤的只要曾一度不在场上表侧表示存在, "那只怪兽在下个回合的结束阶段回到持有者的额外卡组"就不会继续适用. 
-                        </p>
-                        <p>
-                            5. 被"霸王龙之魂"特殊召唤的"霸王龙 扎克"在"大钢琴之七音服·库莉娅"的连接端发动①效果, "大钢琴之七音服·库莉娅"②效果会适用, 这个发动的效果不会被无效. 
-                        </p>
-                        <p>
-                            6. 连锁"技能抽取"的发动发动"七音服的正装"的场合, 灵摆怪兽发动的怪兽效果依旧会被无效化. 连锁"大逮捕"也一样. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                "多之七音服·库莉娅"的①效果可以解放里侧表示的灵摆怪兽. 
+                            </p>
+                            <p>
+                                不解放自身来发动②的怪兽效果的"七音服·索尔费吉娅"不能被连锁"屋敷童".
+                            </p>
+                            <p>
+                                "西之七音服·比蒂娅"的"那张卡从场上离开的场合除外"即使是对的陷阱怪兽适用, 那个陷阱怪兽在怪兽区域从场上离开的场合也会除外. 同时, 也当作陷阱卡使用的陷阱怪兽被"卡的效果无效"类效果无效, 表侧表示回到魔法/陷阱区域, 再从场上离开的场合也会除外. 
+                            </p>
+                            <p>
+                                "霸王龙之魂"不能特殊召唤额外卡组表侧表示的"霸王龙 扎克". 这个效果特殊召唤的只要曾一度不在场上表侧表示存在, "那只怪兽在下个回合的结束阶段回到持有者的额外卡组"就不会继续适用. 
+                            </p>
+                            <p>
+                                被"霸王龙之魂"特殊召唤的"霸王龙 扎克"在"大钢琴之七音服·库莉娅"的连接端发动①效果, "大钢琴之七音服·库莉娅"②效果会适用, 这个发动的效果不会被无效. 
+                            </p>
+                            <p>
+                                连锁"技能抽取"的发动发动"七音服的正装"的场合, 自己场上的灵摆怪兽依旧会受那个效果影响. 连锁"大逮捕"也一样. 
+                            </p>
+                        </div>
                         <h2>注意</h2>
-                        <p>
-                            1. "梭之七音服·格蕾西娅"有攻击宣言以及伤害步骤对对方怪兽禁言效果. 只能在自己的"七音服"怪兽攻击时才会适用. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
-                        </p>
-                        <p>
-                            2. "七音服·索尔费吉娅"的灵摆的①效果只有自己场上存在"大钢琴之七音服"怪兽才能适用. 
-                        </p>
-                        <p>
-                            3. "多之七音服·丘蒂娅"有上升攻击力的效果. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
-                        </p>
-                        <p>
-                            4. "七音服·普莉莫娅"会让自己发动的"七音服"卡的效果不会被无效化. 必须要自己灵摆区域存在奇数与偶数. "那个发动无效"类效果仍可以无效"七音服"卡的发动. "大钢琴之七音服·库莉娅"的②效果也一样. 
-                        </p>
-                        <p>
-                            5. "大钢琴之七音服·库莉娅"的③效果只能在自己的灵摆区域有奇数刻度存在才能发动. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                "梭之七音服·格蕾西娅"有攻击宣言以及伤害步骤对方不能把怪兽的效果发动的效果. 只能在自己的"七音服"怪兽攻击时才会适用. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
+                            </p>
+                            <p>
+                                "七音服·索尔费吉娅"的灵摆的①效果只有自己场上存在"大钢琴之七音服"怪兽才能适用. 
+                            </p>
+                            <p>
+                               "多之七音服·丘蒂娅"有上升攻击力的效果. 必须要自己灵摆区域存在偶数刻度才能适用. 0是偶数. 
+                            </p>
+                            <p>
+                                "七音服·普莉莫娅"会让自己发动的"七音服"卡的效果不会被无效化. 必须要自己灵摆区域存在奇数与偶数. "那个发动无效"类效果仍可以无效"七音服"卡的效果的发动. 对于"那个发动无效"类效果, "大钢琴之七音服·库莉娅"的②效果也一样. 
+                            </p>
+                            <p>
+                                "大钢琴之七音服·库莉娅"的③效果只能在自己的灵摆区域有奇数刻度的"七音服"卡存在才能发动. 
+                            </p>
+                        </div>
                         <h2>自肃</h2>
 
                         <h2>卡组预览</h2>
