--- a/page-about.html
+++ b/page-about.html
@@ -67,7 +67,7 @@
                         
                     </p>
                     <p>
-                        本项目由梅洛以及包含蹦蹦在内的很多中国大陆裁判提供维护, 网站由水橋パルスィ提供. 
+                        本项目由梅洛以及包含蹦蹦在内的很多中国大陆裁判提供维护, 网站由水橋パルスィ提供. 神人都市：457767939 | SRDS招新群：722481303
                     </p>
                     <p>
                         如果您发现错误或是有您想加入的卡组又或是您需要提供您整理的资料来支持本项目, 可以访问我们的<a href="https://docs.qq.com/sheet/DSFBKTEtGRWNaV0Fr">腾讯文档</a>. 
