巳剑新增内容

--- a/Mitsurugi.html
+++ b/Mitsurugi.html
@@ -148,6 +148,9 @@
                             <p>
                                 「巳剑之皇子 小碓」有爬虫类族效果自肃.
                             </p>
+                            <p>
+                                「灵王的波动」会影响到: 「大傩主水」, 「天霆号 阿宙斯」, 「龙卷龙」, 「光龙王@火灵天星」, 「御影志士」. 
+                            </p>
                         </div>
 
                         <h2>卡组预览</h2>
