更新绚岚格式

--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -70,47 +70,55 @@
 
                     <div class="entry__content">
                         <h2>裁定</h2>
-                        <p>
-                            1. 连锁1发动"旋风", 连锁2发动禁忌的一滴Cost将手卡的"绚岚豪火 凤凰"送去墓地的场合. 那个连锁处理完毕后, "绚岚豪火 凤凰"不能发动③效果.
-                        </p>
-                        <p>
-                            2. "小丑与锁鸟"的效果适用中, 也可以发动"绚岚之权能"的①效果. 那些卡也会回到卡组. 卡组不存在卡的场合, 也能发动那个①效果.
-                        </p>
-                        <p>
-                            3. "绚岚"速攻/永续陷阱卡被"旋风"破坏, 场上存在"大宇宙"适用中, 也能发动那个"这张卡被「旋风」的效果破坏的场合才能发动"的效果, 从除外状态盖回到场上.
-                        </p>
-                        <p>
-                            4. "绚岚之海灵 派比安"的②效果适用中, 可用的魔法/陷阱区域不足的场合, 先尽可能的把作为对象的怪兽当作永续魔法卡在魔法陷阱区域表侧表示放置. 剩余的怪兽送去墓地.
-                        </p>
-                        <p>
-                            5. C1发动旋风, C2发动"禁忌的一滴"把手卡的"绚岚涡丽 派比安"送去墓地. 这个连锁处理完毕后, "绚岚涡丽 派比安"的③效果不能发动. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                连锁1发动「旋风」, 连锁2发动禁忌的一滴Cost将手卡的「绚岚豪火 凤凰」送去墓地的场合. 那个连锁处理完毕后, 「绚岚豪火 凤凰」不能发动③效果.
+                            </p>
+                            <p>
+                                「小丑与锁鸟」的效果适用中, 也可以发动「绚岚之权能」的①效果. 那些卡也会回到卡组. 卡组不存在卡的场合, 也能发动那个①效果.
+                            </p>
+                            <p>
+                                「绚岚」速攻/永续陷阱卡被「旋风」破坏, 场上存在「大宇宙」适用中, 也能发动那个"这张卡被「旋风」的效果破坏的场合才能发动"的效果, 从除外状态盖回到场上.
+                            </p>
+                            <p>
+                                「绚岚之海灵 派比安」的②效果适用中, 可用的魔法/陷阱区域不足的场合, 先尽可能的把作为对象的怪兽当作永续魔法卡在魔法陷阱区域表侧表示放置. 剩余的怪兽送去墓地.
+                            </p>
+                            <p>
+                                C1发动旋风, C2发动「禁忌的一滴」把手卡的「绚岚涡丽 派比安」送去墓地. 这个连锁处理完毕后, 「绚岚涡丽 派比安」的③效果不能发动. 
+                            </p>
+                        </div>
 
                         <h2>注意</h2>
-                        <p>
-                            1. "绚岚之风神"只有在自己墓地有「旋风」存在的场合或者对方场上没有魔法·陷阱卡存在的场合才能特殊召唤. 不告知对方是特殊召唤的场合, 发生争执可能会被认为是通常召唤. "绚岚之达维", "绚岚之米克拉"也一样.
-                        </p>
-                        <p>
-                            2. "天雷之双风神 息那"一回合一次不会被战斗破坏. "绚岚之罗莎"对方场上不存在魔法陷阱卡才不会被战斗/效果破坏.
-                        </p>
-                        <p>
-                            3. "绚岚之罗莎"有自肃. "绚岚之米克拉"也一样. 发动后注意不能发动超融合. 
-                        </p>
-                        <p>
-                            4. "绚岚之米克拉"的②效果在发动"绚岚"速攻魔法卡或"旋风"的场合才能发动. 不能在发动"落胤与圣女", "超融合"等卡的场合发动.  
-                        </p>
-                        <p>
-                            5. "天雷之双风神 息那"连锁魔法/陷阱卡的发动只能将场上的魔法/陷阱卡吹回手卡. 不能连锁"无限泡影"的发动选择场上的怪兽回到手卡来躲避"无限泡影".  
-                        </p>
-                        <p>
-                            6. "天雷之双风神 息那"连锁怪兽发动, 处理时所有卡名是"天雷之双风神 息那"的怪兽都不会回到手卡. 
-                        </p>
-                        <p>
-                            7. "绚岚之达维"是兽族, "炎舞-「天玑」"无法为其增加攻击力. 
-                        </p>
-                        <p>
-                            8. "绚岚的权能"①效果取对象的卡必须包含一张"绚岚"卡, ②效果不能以自己场上的表侧表示卡为对象. 
-                        </p>
+                        <div class="auto-number">
+                            <p>
+                                「绚岚之风神」只有在自己墓地有「旋风」存在的场合或者对方场上没有魔法·陷阱卡存在的场合才能特殊召唤. 不告知对方是特殊召唤的场合, 发生争执可能会被认为是通常召唤. 「绚岚之达维」, 「绚岚之米克拉」也一样.
+                            </p>
+                            <p>
+                                「天雷之双风神 息那」一回合一次不会被战斗破坏. 「绚岚之罗莎」对方场上不存在魔法陷阱卡才不会被战斗/效果破坏.
+                            </p>
+                            <p>
+                                「绚岚之米克拉」的②效果在发动「绚岚」速攻魔法卡或「旋风」的场合才能发动. 不能在发动「落胤与圣女」, 「超融合」等卡的场合发动.  
+                            </p>
+                            <p>
+                                「天雷之双风神 息那」连锁魔法/陷阱卡的发动只能将场上的魔法/陷阱卡吹回手卡. 不能连锁「无限泡影」的发动选择场上的怪兽回到手卡来躲避「无限泡影」.  
+                            </p>
+                            <p>
+                                「天雷之双风神 息那」连锁怪兽发动, 处理时所有卡名是「天雷之双风神 息那」的怪兽都不会回到手卡. 
+                            </p>
+                            <p>
+                                「绚岚之达维」是兽族, 「炎舞-「天玑」」无法为其增加攻击力. 
+                            </p>
+                            <p>
+                                「绚岚的权能」①效果取对象的卡必须包含一张「绚岚」卡, ②效果不能以自己场上的表侧表示卡为对象. 
+                            </p>
+                        </div>
+
+                        <h2>自肃</h2>
+                        <div class="auto-number">
+                            <p>
+                                「绚岚之罗莎」有风属性怪兽特殊召唤自肃. 「绚岚之米克拉」也一样. 发动后注意不能发动超融合. 
+                            </p>
+                        </div>
 
                         <h2>卡组预览</h2>
 
