--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         ================================================== -->
 
         <div class="s-content" style="text-align: center;">
+            本站由SRDS以及中国大陆多位裁判共同提供支持, 详见<a href="page-about.html">关于我们</a><br>
             <div style="color: red;">如果在比赛过程中使用本页面, 可能会受到警告以上判罚</div>
         </div>
 
