--- a/header.html
+++ b/header.html
@@ -42,6 +42,7 @@
                     <li><a href="Maliss.html">码丽丝</a></li>
                     <li><a href="DDD.html">DDD</a></li>
                     <li><a href="Solfachord.html">七音服</a></li>
+                    <li><a href="Lunalight.html">月光</a></li>
                 </ul>
             </li>
             <li><a href="page-about.html" title="">About</a></li>
