--- a/Lunalight.html
+++ b/Lunalight.html
@@ -84,6 +84,12 @@
                             <p>
                                 「法典之守护者 艾华斯」可以以「月光舞狮子神姬」为对象发动自身的①效果. 这个场合, 「装备怪兽的效果不能发动」会适用.
                             </p>
+                            <p>
+                                「月光银狗」①效果特殊召唤的怪兽控制权变更的场合, 那个自肃立刻不适用. 即使之后控制权归还也不会恢复适用. 
+                            </p>
+                            <p>
+                                连锁1对方发动获得了「月光舞狮子神姬」效果的「霸王眷龙 凶饿毒」的那个获得的③效果, 自己连锁发动「月光舞狮子神姬」的③效果的场合, 连锁1处理时, 自己的「月光舞狮子神姬」依旧被破坏. 
+                            </p>
                         </div>
                         <h2>注意</h2>
                         <div class="auto-number">
@@ -116,7 +122,7 @@
                         <h2>自肃</h2>
                         <div class="auto-number">
                             <p>
-                                「月光银狗」有自肃. ①效果特殊召唤的自身在表侧表示存在有从额外卡组「月光」怪兽特殊召唤自肃. 
+                                「月光银狗」有自肃. ①效果特殊召唤的怪兽在表侧表示存在有从额外卡组「月光」怪兽特殊召唤自肃. 
                             </p>
                             <p>
                                 「灵王的波动」会影响到: 「交织绵羊」, 「励辉士 入魔蝇王」, 「外神 奈亚拉」, 「御影志士」, 「梦幻崩影 狮鹫」.
