--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -111,6 +111,21 @@
                             <p>
                                 「绚岚的权能」①效果取对象的卡必须包含一张「绚岚」卡, ②效果不能以自己场上的表侧表示卡为对象. 
                             </p>
+                            <p>
+                                「绚岚之海灵 派比安」在墓地存在, 只有发动「旋风」的场合③效果才能发动. 不能在发动「落胤与圣女」, 「超融合」等卡的场合发动.  「绚岚豪火 凤凰」也一样. 
+                            </p>
+                            <p>
+                                「鹰身女妖的羽毛吹雪」只有在自己场上存在「鹰身」怪兽才能从手牌发动. 只有「绚岚之罗莎」存在不能从手牌发动. 
+                            </p>
+                            <p>
+                                「绚岚之海灵 派比安」的召唤条件是「绚岚」怪兽2只, 不能用「欢聚友伴·茸茸长尾山雀」作为素材. 
+                            </p>
+                            <p>
+                                速攻魔法卡被发动无效, 不能另开连锁发动「绚岚之罗莎」的①效果. 「绚岚涡丽 派比安」,  「绚岚豪火 凤凰」也一样. 
+                            </p>
+                            <p>
+                                「绚岚」速攻魔法卡或「旋风」被发动无效, 不能另开连锁发动「绚岚之米克拉」的②效果. 
+                            </p>
                         </div>
 
                         <h2>自肃</h2>
