--- a/Radiant_Typhoon.html
+++ b/Radiant_Typhoon.html
@@ -97,7 +97,7 @@
                                 「天雷之双风神 息那」一回合一次不会被战斗破坏. 「绚岚之罗莎」对方场上不存在魔法陷阱卡才不会被战斗/效果破坏.
                             </p>
                             <p>
-                                「绚岚之米克拉」的②效果在发动「绚岚」速攻魔法卡或「旋风」的场合才能发动. 不能在发动「落胤与圣女」, 「超融合」等卡的场合发动.  
+                                「绚岚之米克拉」的②效果在发动「绚岚」速攻魔法卡或「旋风」的场合才能发动. 不能在发动「落胤与圣女」, 「超融合」等卡的场合发动.  那个发动被发动无效, 不能另开连锁发动「绚岚之米克拉」的②效果. 
                             </p>
                             <p>
                                 「天雷之双风神 息那」连锁魔法/陷阱卡的发动只能将场上的魔法/陷阱卡吹回手卡. 不能连锁「无限泡影」的发动选择场上的怪兽回到手卡来躲避「无限泡影」.  
@@ -122,9 +122,6 @@
                             </p>
                             <p>
                                 速攻魔法卡被发动无效, 不能另开连锁发动「绚岚之罗莎」的①效果. 「绚岚涡丽 派比安」,  「绚岚豪火 凤凰」也一样. 
-                            </p>
-                            <p>
-                                「绚岚」速攻魔法卡或「旋风」被发动无效, 不能另开连锁发动「绚岚之米克拉」的②效果. 
                             </p>
                         </div>
 
